--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-uglifyjs": "^0.6.2",
-    "normalize.css": "^7.0.0"
+    "gulp-uglifyjs": "^0.6.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "jquery": "^3.2.1",
+    "normalize.css": "^7.0.0"
+  }
 }
