--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^3.0.0",
-    "gulp-uglifyjs": "^0.6.2"
+    "gulp-uglifyjs": "^0.6.2",
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
     "jquery": "^3.2.1",
