--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "gulp-pug": "^3.3.0",
     "gulp-replace": "^0.6.1",
     "gulp-sass": "^3.1.0",
+    "gulp-svg-css": "^1.3.0",
+    "gulp-svgmin": "^1.2.4",
     "gulp-uglify": "^3.0.0",
     "gulp-uglifyjs": "^0.6.2",
     "slick-carousel": "^1.8.1"
