--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-  "name": "gulp-template",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "browser-sync": "^2.18.12",
-    "cssnano": "^3.10.0",
-    "del": "^3.0.0",
-    "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^4.0.0",
-    "gulp-babel": "^7.0.0",
-    "gulp-cache": "^0.4.6",
-    "gulp-concat": "^2.6.1",
-    "gulp-cssbeautify": "^0.1.3",
-    "gulp-cssmin": "^0.2.0",
-    "gulp-csso": "^3.0.0",
-    "gulp-html-beautify": "^1.0.1",
-    "gulp-imagemin": "^3.4.0",
-    "gulp-load-plugins": "^1.5.0",
-    "gulp-pug": "^3.3.0",
-    "gulp-replace": "^0.6.1",
-    "gulp-sass": "^3.1.0",
-    "gulp-svg-css": "^1.3.0",
-    "gulp-svgmin": "^1.2.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-uglifyjs": "^0.6.2",
-    "slick-carousel": "^1.8.1"
-  },
-  "dependencies": {
-    "jquery": "^3.2.1",
-    "normalize.css": "^7.0.0"
-  }
+    "name": "coffee",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "",
+    "license": "ISC",
+    "devDependencies": {
+        "babel-core": "^6.26.0",
+        "babel-preset-env": "^1.6.1",
+        "browser-sync": "^2.18.12",
+        "cssnano": "^3.10.0",
+        "del": "^3.0.0",
+        "gulp": "^3.9.1",
+        "gulp-autoprefixer": "^4.0.0",
+        "gulp-babel": "^7.0.0",
+        "gulp-cache": "^0.4.6",
+        "gulp-concat": "^2.6.1",
+        "gulp-cssbeautify": "^0.1.3",
+        "gulp-cssmin": "^0.2.0",
+        "gulp-csso": "^3.0.0",
+        "gulp-html-beautify": "^1.0.1",
+        "gulp-imagemin": "^3.4.0",
+        "gulp-load-plugins": "^1.5.0",
+        "gulp-pug": "^3.3.0",
+        "gulp-replace": "^0.6.1",
+        "gulp-sass": "^3.1.0",
+        "gulp-svg-css": "^1.3.0",
+        "gulp-svgmin": "^1.2.4",
+        "gulp-uglify": "^3.0.0",
+        "gulp-uglifyjs": "^0.6.2",
+        "slick-carousel": "^1.8.1"
+    },
+    "dependencies": {
+        "jquery": "^3.2.1",
+        "jquery-mask-plugin": "^1.14.12",
+        "normalize.css": "^7.0.0"
+    }
 }
